yaml/k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dify-sso
  labels:
    app.kubernetes.io/name: dify-sso
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dify-sso
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dify-sso
    spec:
      containers:
        - name: dify-sso
          image: harbor.joiningos.com/library/dify-sso:1.0.4
          ports:
            - name: api
              containerPort: 8000
              protocol: TCP
          resources:
            limits:
              cpu: '500m'
              memory: '512Mi'
            requests:
              cpu: '100m'
              memory: '128Mi'
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
          lifecycle:
            preStop:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - 'sleep 10'
          livenessProbe:
            httpGet:
              path: /health
              port: api
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /health
              port: api
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 5
      restartPolicy: Always
      terminationGracePeriodSeconds: 90
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
      enableServiceLinks: false
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 600

---
apiVersion: v1
kind: Service
metadata:
  name: dify-sso
  labels:
    app.kubernetes.io/name: dify-sso
spec:
  ports:
    - name: http-api
      protocol: TCP
      port: 8000
      targetPort: api
  selector:
    app.kubernetes.io/name: dify-sso
  type: ClusterIP
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  internalTrafficPolicy: Cluster

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/managed-by: Helm
  name: dify-sso
spec:
  ingressClassName: nginx
  rules:
  - host: dify-sso.joiningos.com
    http:
      paths:
      - backend:
          service:
            name: join-sso
            port:
              number: 8000
        path: /
        pathType: ImplementationSpecific
#  tls:
#  - hosts:
#    - dify-sso.joiningos.com
#    secretName: join-joiningos
